rules.v4
# Generated by xtables-save v1.8.2 on Thu Jan  9 20:36:13 2020
*filter
:OUTPUT DROP [0:0]
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:In_RULE_0 - [0:0]
:Out_RULE_0 - [0:0]
:RULE_0 - [0:0]
:In_RULE_1 - [0:0]
:Out_RULE_1 - [0:0]
:In_RULE_2 - [0:0]
:Out_RULE_2 - [0:0]
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m physdev --physdev-out eth0 --physdev-is-bridged -m state --state NEW -j Out_RULE_0
-A OUTPUT -m physdev --physdev-out eth1 --physdev-is-bridged -m state --state NEW -j Out_RULE_1
-A OUTPUT -o br0 -m state --state NEW -j Out_RULE_2
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m physdev --physdev-in eth0 -m state --state NEW -j In_RULE_0
-A INPUT -m physdev --physdev-in eth1 -m state --state NEW -j In_RULE_1
-A INPUT -i br0 -m state --state NEW -j In_RULE_2
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m physdev --physdev-in eth0 -m state --state NEW -j In_RULE_0
-A FORWARD -m physdev --physdev-out eth0 --physdev-is-bridged -m state --state NEW -j Out_RULE_0
-A FORWARD -m physdev --physdev-in eth1 -m state --state NEW -j In_RULE_1
-A FORWARD -m physdev --physdev-out eth1 --physdev-is-bridged -m state --state NEW -j Out_RULE_1
-A FORWARD -i br0 -m state --state NEW -j In_RULE_2
-A FORWARD -o br0 -m state --state NEW -j Out_RULE_2
-A In_RULE_0 -j LOG --log-prefix netvipi-eth0 --log-level 6
-A In_RULE_0 -j ACCEPT
-A Out_RULE_0 -j LOG --log-prefix netvipi-eth0 --log-level 6
-A Out_RULE_0 -j ACCEPT
-A In_RULE_1 -j LOG --log-prefix netvipi-eth1 --log-level 6
-A In_RULE_1 -j ACCEPT
-A Out_RULE_1 -j LOG --log-prefix netvipi-eth1 --log-level 6
-A Out_RULE_1 -j ACCEPT
-A In_RULE_2 -j LOG --log-prefix netvipi-br0 --log-level 6
-A In_RULE_2 -j ACCEPT
-A Out_RULE_2 -j LOG --log-prefix netvipi-br0 --log-level 6
-A Out_RULE_2 -j ACCEPT
COMMIT
# Completed on Thu Jan  9 20:36:13 2020
